--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <body>
-  <h1>Chatper Two Bookclub </h1>
+  <h1>Chapter Two Bookclub </h1>
   <p>Welcome to our bookclub! </p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
