Add head section with stylesheet link
Added a head section with a stylesheet link.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
+  <head>
 <link rel="stylesheet" href="index.css">
+    
+  </head>
+
 <body>
   <h1>Chapter Two Bookclub </h1>
   <p>Welcome to our bookclub! </p>
